# llm_code_and_review_tools

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  HANDOFF.md  Makefile  README.md  TODO.md  install.sh  jira_tool-0.2.0-py3-none-any.whl  pyproject.toml
.beads/: issues.jsonl
.gerrit-cli/: last-url.json
crash_tool/: pyproject.toml
crash_tool/crash_tool/: cli.py  session.py
crash_tool/crash_tool/drgn_scripts/: __init__.py  cfs_hashes.py  dk.py  ldlm_dumplocks.py  lustre_analyze.py  lustre_helpers.py  obd_devs.py  ptlrpc.py  uniqueStacktrace.py
crash_tool/tests/: test_cli.py  test_session.py
docs/: TOOL_USAGE.md
gerrit_cli/: ARCHITECTURE.md  INSTALL.md  README.md  SKILLS.md  TODO.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
gerrit_cli/gerrit_cli/: __init__.py  cli.py  client.py  describe.py  envelope.py  errors.py  extractor.py  git_utils.py  graph.py  interactive.py  interactive_vim.py  parsers.py  patch_workflow.py  rebase.py  rebase_manager.py  reintegration.py  reviewer.py  sashiko_bridge.py  series.py  series_status.py  session.py  staging.py  summary.py  tmux_vim.py
gerrit_cli/gerrit_cli/commands/: __init__.py  _helpers.py  ci.py  meta.py  review.py
gerrit_cli/gerrit_cli/graph/: __init__.py  build.py
gerrit_cli/gerrit_cli/graph/templates/: graph.html  graph.js
gerrit_cli/gerrit_cli/templates/: graph.css  graph.html  graph.js
gerrit_cli/gerrit_cli/tests/: __init__.py  test_cli.py  test_cli_integration.py  test_client.py  test_envelope.py  test_extractor.py  test_git_utils.py  test_integration.py  test_interactive.py  test_interactive_vim.py  test_models.py  test_parsers.py  test_rebase.py  test_reintegration.py  test_replier.py  test_reviewer.py  test_series.py  test_series_status.py  test_session.py  test_staging.py  test_tmux_vim.py
gerrit_cli/scripts/: gerrit-completion.bash  install_pkgs.sh
gerrit_comments/: AGENTS.md  INSTALL.md  README.md  SKILLS.md  TODO.md  architecture.md  install.sh  pyproject.toml  skills.md  uninstall.sh
gerrit_comments/gerrit_comments/: __init__.py  cli.py  client.py  describe.py  envelope.py  errors.py  extractor.py  interactive.py  interactive_vim.py  models.py  parsers.py  rebase.py  reintegration.py  replier.py  reviewer.py  series.py  session.py  staging.py  tmux_vim.py
gerrit_comments/gerrit_comments/tests/: __init__.py  test_cli.py  test_cli_integration.py  test_client.py  test_extractor.py  test_git_utils.py  test_integration.py  test_interactive.py  test_interactive_vim.py  test_models.py  test_parsers.py  test_rebase.py  test_reintegration.py  test_replier.py  test_reviewer.py  test_series.py  test_series_status.py  test_session.py  test_staging.py  test_tmux_vim.py
gerrit_comments/scripts/: gerrit-comments-completion.bash
janitor_tool/tests/: test_cli.py  test_client.py  test_config.py  test_errors.py
jenkins_tool/: README.md  pyproject.toml
jenkins_tool/jenkins_tool/: __init__.py  cli.py  client.py  config.py  describe.py
jenkins_tool/tests/: test_cli.py
jira_tool/: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  SKILLS.md  pyproject.toml
jira_tool/data/: onprem_filters_scraped.json
jira_tool/jira_tool/: __init__.py  cli.py  client.py  config.py  describe.py  envelope.py  errors.py
jira_tool/jira_tool/commands/: __init__.py  _helpers.py  attachments.py  comments.py  config_cmds.py  filters.py  issues.py  labels.py  links.py  projects.py  search.py  users.py  watchers.py  worklogs.py
jira_tool/redistrib/: CLAUDE.md  INSTALL.md  build.sh
jira_tool/tests/integration/: test_live_jira.py
jira_tool/tests/unit/: test_cli.py  test_client.py  test_config.py  test_envelope.py  test_errors.py
llm_tool_common/: __init__.py  pyproject.toml
llm_tool_common/llm_tool_common/: __init__.py  errors.py
llm_tool_common/llm_tool_common/tests/: __init__.py  test_envelope.py  test_errors.py
llm_tool_common/src/llm_tool_common/: __init__.py  decorators.py  describe.py  envelope.py
llm_tool_common/tests/: test_decorators.py  test_envelope.py  test_errors.py
lustre-drgn-tools/: README.md  dk.py  dump_lustre_hashes.py  import_health.py  install-drgn.sh  kernel_triage.py  ldlm_deadlock.py  ldlm_dumplocks.py  lustre_drgn.py  lustre_helpers.py  lustre_triage.py  lustre_waitq.py  obd_devs.py  osc_stats.py  ptlrpc.py  pyproject.toml  stripe_layout.py  uniqueStacktrace.py
lustre_crash/: README.md  pyproject.toml
lustre_crash/lustre_crash/: __init__.py  cli.py  session.py
lustre_crash/tests/: test_cli.py  test_session.py
maloo_tool/maloo_tool/: cli.py  client.py
maloo_tool/tests/: test_cli.py
patch_shepherd/: orchestrator.py
patch_watcher/: CLAUDE.md  config.py  orchestrator.py  patch_watcher.service  patch_watcher_daily.service  run_watcher.sh  watcher_tool.sh
patch_watcher/tests/: test_orchestrator.py
