[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gerrit-cli"
version = "0.2.4"
description = "Gerrit CLI for code review, comment management, and patch workflows"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Claude", email = "claude@anthropic.com"}
]
keywords = ["gerrit", "code-review", "cli", "agent", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "pygerrit2>=2.0.15",
    "requests>=2.25.0",
    "flask>=3.0.2",
    "flask-caching>=2.1.0",
    "python-dotenv>=0.19.0",
    "llm-tool-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-requests>=2.28.0",
    "types-Flask>=1.1.0",
]

[project.scripts]
gerrit = "gerrit_cli.cli:main"
gc = "gerrit_cli.cli:main"
gerrit-cli = "gerrit_cli.cli:main"

[project.urls]
Homepage = "https://github.com/anthropics/claude-code"
Documentation = "https://github.com/anthropics/claude-code"

[tool.setuptools.packages.find]
include = ["gerrit_cli*"]

[tool.pytest.ini_options]
testpaths = ["gerrit_cli/tests"]
addopts = "--strict-markers"
markers = [
    "integration: marks tests that require network access to real Gerrit",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow-running",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict= (Python 3.10+)
]

[tool.ruff.lint.per-file-ignores]
"gerrit_cli/tests/*" = ["B011"]  # allow assert False in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "gerrit_cli.tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["pygerrit2", "pygerrit2.*"]
ignore_missing_imports = true
follow_untyped_imports = false
