[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lustre-crash"
version = "0.2.0"
description = "Non-interactive crash dump analysis using drgn for LLM agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Patrick Farrell"}
]
keywords = ["lustre", "drgn", "vmcore", "kernel", "debugging", "cli", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Operating System Kernels :: Linux",
]
dependencies = [
    "click>=8.0.0",
    "llm-tool-common",
]

[project.scripts]
lustre-crash = "lustre_crash.cli:main"

[tool.setuptools.packages.find]
include = ["lustre_crash*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "B905"]
